--- a/mojgrad.html
+++ b/mojgrad.html
@@ -6,26 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moj grad</title>
     <link rel="stylesheet" href="css/stil.css">
-    <link rel="stylesheet" href="css/racunalni_prikaz.css">
-    <link rel="stylesheet" href="css/tablet_prikaz.css">
-    <link rel="stylesheet" href="css/mobilni_prikaz.css">
+    <link rel="stylesheet" href="css/spojeno.css">
 </head>
 <body>
-    <div class="navigacija" >
-        <nav>
-            <ul>
-                <li><a href="index.html">Naslovna</a></li>
+    <header>
+        <nav class="navigacija">
+            <ul class="nav-izbornik">
+                <li class="nav-sadrzaj">
+                    <a href="index.html">Naslovna</a></li>
                 <li class="desno"></li>
-                <li><a class="aktivna" href="#">Moj grad</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="#" class="aktivna">Moj grad</a></li>
                 <li class="desno"></li>
-                <li><a href="omeni.html">O meni</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="omeni.html">O meni</a></li>
                 <li class="desno"></li>
-                <li><a href="galerija.html">Galerija</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="galerija.html">Galerija</a></li>
                 <li class="desno"></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="kontakt.html">Kontakt</a></li>
             </ul>
+            <div class="hamburger" onclick="myFunction(this)">
+                <div class="linija1"></div>
+                <div class="linija2"></div>
+                <div class="linija3"></div>
+            </div>
         </nav>
-    </div>
+    </header> 
 
     <div class="okvir_raspored"  >
         <div class="raspored">
@@ -79,7 +87,7 @@
     </div>
     
 <div class="datum">
-    <footer>
+    <footer class="footer dno">
         MOJA STRANICA. All Rights Reserved &copy 
         <div id="danasnji_datum"></div>
     </footer>
