--- a/galerija.html
+++ b/galerija.html
@@ -6,126 +6,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fotografija</title>
     <link rel="stylesheet" href="css/stil.css">
-    <link rel="stylesheet" href="css/racunalni_prikaz.css">
-    <link rel="stylesheet" href="css/tablet_prikaz.css">
-    <link rel="stylesheet" href="css/mobilni_prikaz.css">
+    <link rel="stylesheet" href="css/spojeno.css">
 </head>
 <body>
-    <div class="navigacija">
-        <nav>
-            <ul>
-                <li><a href="index.html">Naslovna</a></li>
-                <li class="desno"></li>
-                <li><a href="mojgrad.html">Moj grad</a></li>
-                <li class="desno"></li>
-                <li><a href="omeni.html">O meni</a></li>
-                <li class="desno"></li>
-                <li><a class="aktivna" href="#">Galerija</a></li>
-                <li class="desno"></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </div>
+  <header>
+    <nav class="navigacija">
+        <ul class="nav-izbornik">
+            <li class="nav-sadrzaj">
+                <a href="index.html">Naslovna</a></li>
+            <li class="desno"></li>
+            <li class="nav-sadrzaj">
+                <a href="mojgrad.html">Moj grad</a></li>
+            <li class="desno"></li>
+            <li class="nav-sadrzaj">
+                <a href="omeni.html">O meni</a></li>
+            <li class="desno"></li>
+            <li class="nav-sadrzaj">
+                <a href="#" class="aktivna">Galerija</a></li>
+            <li class="desno"></li>
+            <li class="nav-sadrzaj">
+                <a href="kontakt.html">Kontakt</a></li>
+        </ul>
+        <div class="hamburger" onclick="myFunction(this)">
+            <div class="linija1"></div>
+            <div class="linija2"></div>
+            <div class="linija3"></div>
+        </div>
+    </nav>
+</header> 
 
     
 <div class="galerija" >
   <div class="fotografija">
-      <img id="aquaPark" src="slike/aquapark.jpg" alt="Aqua-park" >
-      <div id="modal1" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika1">
-      </div>
+      <img src="slike/aquapark.jpg" alt="Aqua-park" >
   </div>
   
   <div class="fotografija">
-      <img id="bf" src="slike/bf.jpg" alt="Bf" >
-      <div id="modal2" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika2">
-      </div>
+      <img src="slike/bf.jpg" alt="Dečko" >
   </div>
 
   <div class="fotografija">
-      <img id="vecera" src="slike/date.jpg" alt="Večera" >
-      <div id="modal3" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika3">
-      </div>
+      <img src="slike/date.jpg" alt="Večera" >
   </div>
 
   <div class="fotografija">
-      <img id="ekipa" src="slike/ekipa.jpg" alt="Ekipa" >
-      <div id="modal4" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika4">
-      </div>
+      <img src="slike/ekipa.jpg" alt="Ekipa" >
   </div>
 
   <div class="fotografija">
-      <img id="zabava" src="slike/funday.jpg" alt="Zabava" >
-      <div id="modal5" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika5">
-      </div>
+      <img src="slike/funday.jpg" alt="Zabava" >
   </div>
 
   <div class="fotografija">
-      <img id="mrvica" src="slike/mrvica.jpg" alt="Mrvica" >
-      <div id="modal6" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika6">
-      </div>
+      <img src="slike/mrvica.jpg" alt="Mrvica" >
   </div>
 
   <div class="fotografija">
-      <img id="paintBall" src="slike/paintball.jpg" alt="Paintball" >
-      <div id="modal7" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika7">
-      </div>
+      <img src="slike/paintball.jpg" alt="Paintball" >
   </div>
 
   <div class="fotografija">
-      <img id="kviz" src="slike/kviz.jpeg" alt="Kviz" >
-      <div id="modal8" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika8">
-      </div>
+      <img src="slike/kviz.jpeg" alt="Kviz" >
   </div>
 
   <div class="fotografija">
-      <img id="pubKviz" src="slike/pubkviz.jpg" alt="Pub kviz" >
-      <div id="modal9" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika9">
-      </div>
+      <img src="slike/pubkviz.jpg" alt="Pub kviz" >
   </div>
 
   <div class="fotografija">
-      <img id="taverna" src="slike/taverna.jpg" alt="Taverna" >
-      <div id="modal10" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika10">
-      </div>
+      <img src="slike/taverna.jpg" alt="Taverna" >
   </div>
 
   <div class="fotografija">
-      <img id="zalazak" src="slike/zalazak.jpg" alt="Zalazak" >
-      <div id="modal11" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika11">
-      </div>
+      <img src="slike/zalazak.jpg" alt="Zalazak" >
   </div>
 
   <div class="fotografija">
-      <img id="posao" src="slike/posao.jpg" alt="Posao" >
-      <div id="modal12" class="modal">
-        <span class="zatvori">&times;</span>
-        <img class="modal-sadrzaj" id="slika12">
-      </div>
+      <img src="slike/posao.jpg" alt="Posao">
   </div>
 </div>
+
+
+
+</div>
   
+
 <div class="datum">
   <footer>
       MOJA STRANICA. All Rights Reserved &copy 
