--- a/omeni.html
+++ b/omeni.html
@@ -6,26 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O meni</title>
     <link rel="stylesheet" href="css/stil.css">
-    <link rel="stylesheet" href="css/racunalni_prikaz.css">
-    <link rel="stylesheet" href="css/tablet_prikaz.css">
-    <link rel="stylesheet" href="css/mobilni_prikaz.css">
+    <link rel="stylesheet" href="css/spojeno.css">
 </head>
 <body>
-    <div class="navigacija">
-        <nav>
-            <ul>
-                <li><a href="index.html">Naslovna</a></li>
+    <header>
+        <nav class="navigacija">
+            <ul class="nav-izbornik">
+                <li class="nav-sadrzaj">
+                    <a href="index.html">Naslovna</a></li>
                 <li class="desno"></li>
-                <li><a href="mojgrad.html">Moj grad</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="mojgrad.html">Moj grad</a></li>
                 <li class="desno"></li>
-                <li><a class="aktivna" href="#">O meni</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="#" class="aktivna">O meni</a></li>
                 <li class="desno"></li>
-                <li><a href="galerija.html">Galerija</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="galerija.html">Galerija</a></li>
                 <li class="desno"></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li class="nav-sadrzaj">
+                    <a href="kontakt.html">Kontakt</a></li>
             </ul>
+            <div class="hamburger" onclick="myFunction(this)">
+                <div class="linija1"></div>
+                <div class="linija2"></div>
+                <div class="linija3"></div>
+            </div>
         </nav>
-    </div>
+    </header> 
 
     <div class="okvir">
        <div class="slika">
@@ -43,7 +51,7 @@
   
     
 
-    <footer>
+    <footer class="footer dno">
         MOJA STRANICA. All Rights Reserved &copy 
         <div id="danasnji_datum"></div>
     </footer>
